Modernize recipe; package license.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,4 @@
 {% set version = '1.2.4' %}
-
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
 
@@ -10,38 +9,40 @@ package:
 source:
   fn: minqa_{{ version }}.tar.gz
   url:
-    - https://cran.r-project.org/src/contrib/minqa_{{ version }}.tar.gz
-    - https://cran.r-project.org/src/contrib/Archive/minqa/minqa_{{ version }}.tar.gz
+    - {{ cran_mirror }}/src/contrib/minqa_{{ version }}.tar.gz
+    - {{ cran_mirror }}/src/contrib/Archive/minqa/minqa_{{ version }}.tar.gz
   sha256: cfa193a4a9c55cb08f3faf4ab09c11b70412523767f19894e4eafc6e94cccd0c
 
 build:
   merge_build_host: True  # [win]
-  number: 1
+  number: 2
   skip: true  # [win32]
-
   rpaths:
     - lib/R/lib/
     - lib/
+
 requirements:
   build:
-    - posix                # [win]
-    - {{ compiler('fortran') }}        # [unix]
-    - {{ compiler('m2w64_fortran') }}  # [win]
-    - {{ compiler('c') }}        # [unix]
-    - {{ compiler('m2w64_c') }}  # [win]
-    - {{ compiler('cxx') }}        # [unix]
-    - {{ compiler('m2w64_cxx') }}  # [win]
+    - {{ compiler('c') }}        # [not win]
+    - {{ compiler('cxx') }}      # [not win]
+    - {{ compiler('fortran') }}  # [not win]
+    - {{native}}toolchain        # [win]
+    - {{posix}}filesystem        # [win]
+    - {{posix}}make
+    - {{posix}}sed               # [win]
+    - {{posix}}coreutils         # [win]
+    - {{posix}}zip               # [win]
   host:
     - r-base
     - r-rcpp >=0.9.10
-
   run:
     - r-base
+    - {{native}}gcc-libs         # [win]
     - r-rcpp >=0.9.10
 
 test:
   commands:
-    - $R -e "library('minqa')"  # [not win]
+    - $R -e "library('minqa')"           # [not win]
     - "\"%R%\" -e \"library('minqa')\""  # [win]
 
 about:
@@ -50,8 +51,13 @@ about:
   summary: Derivative-free optimization by quadratic approximation based on an interface to Fortran
     implementations by M. J. D. Powell.
   license_family: GPL2
+  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-2'  # [unix]
+  license_file: '{{ environ["PREFIX"] }}\R\share\licenses\GPL-2'  # [win]
 
 extra:
   recipe-maintainers:
     - johanneskoester
     - bgruening
+    - daler
+    - jdblischak
+    - cbrueffer
