[skip ci] [ci skip] Fix license

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -51,8 +51,7 @@ about:
   summary: Derivative-free optimization by quadratic approximation based on an interface to Fortran
     implementations by M. J. D. Powell.
   license_family: GPL2
-  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-2'  # [unix]
-  license_file: '{{ environ["PREFIX"] }}\R\share\licenses\GPL-2'  # [win]
+  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-2'
 
 extra:
   recipe-maintainers:
