--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -7,7 +7,6 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: minqa_{{ version }}.tar.gz
   url:
     - {{ cran_mirror }}/src/contrib/minqa_{{ version }}.tar.gz
     - {{ cran_mirror }}/src/contrib/Archive/minqa/minqa_{{ version }}.tar.gz
@@ -16,7 +15,6 @@ source:
 build:
   merge_build_host: True  # [win]
   number: 1006
-  skip: true  # [win32]
   rpaths:
     - lib/R/lib/
     - lib/
@@ -49,17 +47,13 @@ test:
 
 about:
   home: http://optimizer.r-forge.r-project.org
-  license: GPL-2
+  license: GPL-2.0-only
   summary: Derivative-free optimization by quadratic approximation based on an interface to Fortran
     implementations by M. J. D. Powell.
   license_family: GPL2
-  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-2'
+  license_file:
+    - '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-2'
 
 extra:
   recipe-maintainers:
     - conda-forge/r
-    - johanneskoester
-    - bgruening
-    - daler
-    - jdblischak
-    - cbrueffer
